--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!-- single banner -->
         <div class="single-banner">
             <div class="itembg">
-                <img src="img/banner/seed1.JPG" alt="">
+                <img src="img/banner/seek.JPG" alt="">
             </div>
             <div class="container">
                 <div class="row">
@@ -162,7 +162,10 @@
                                 <h1><span>Feeding</span> the homeless and <span>hungry.</span></h1>
                                 <p>No one should encounter going a day without food.</p>
                                 <a href="" class="tem-btn nav-link move-eff"><span>donate now</span></a>
-                                <a href="#" class="tem-btn move-eff wmBox" data-popup="https://www.youtube.com/embed/7e90gBu4pas?autoplay=1"><span>play video</span></a>
+
+                                <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn move-eff"><span>join volunteer</span></a>
+
+                                <!-- <a href="#" class="tem-btn move-eff wmBox" data-popup="https://www.youtube.com/embed/7e90gBu4pas?autoplay=1"><span>play video</span></a> -->
                             </div>
                         </div>
                     </div>
@@ -856,31 +859,34 @@
         events part start
         ============================
     -->
-    <!-- <section class="events-area section-padding" id="events">
+    <section class="events-area section-padding" id="events">
         <div class="container">
             <div class="row">
-                <div class="col-sm-8 col-sm-offset-2"> -->
-    <!-- section title -->
-    <!-- <div class="title text-center">
-                        <h2>Upcoming Events</h2>
+                <div class="col-sm-8 col-sm-offset-2">
+                    <!-- section title -->
+                    <div class="title text-center">
+                        <h2>Community Programs</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p>Learn about our upcoming events to stay engage, active, and connected.</p>
+                        <p>Learn about our upcoming events to stay engaged, active, and connected.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4 col-sm-6"> -->
-    <!-- Single events -->
-    <!-- <div class="events-info">
+                <div class="col-md-4 col-sm-6">
+                    <!-- Single events -->
+                    <div class="events-info">
                         <div class="events-img">
-                            <img src="img/about/st.JPG" alt="">
+                            <img src="img/about/hf.JPG" alt="">
                             <div class="events-post-date-info">
-                                <span>29</span> September
+                                <span>1</span> Health and Fitness:
+
                             </div>
                         </div>
                         <div class="events-content">
                             <a href="#">
-                                <h2>STEMtastic Saturday</h2>
+                                <h2>
+                                    Our fitness education program is designed to help youth in diverse communities become healthier and physically active. We aim to teach the youth about agriculture and how to grow their own food; provide nutrition and fitness education curriculum, online
+                                    resources, free fitness workshops, fitness classes and outdoor activities.</h2>
                             </a>
                             <div class="events-post-meta">
                                 <ul>
@@ -894,19 +900,20 @@
                 </div>
 
 
-                <div class="col-md-4 col-sm-6"> -->
-    <!-- Single events -->
-    <!-- <div class="events-info">
+                <div class="col-md-4 col-sm-6">
+                    <!-- Single events -->
+                    <div class="events-info">
                         <div class="events-img">
-                            <img src="img/about/food.JPG" alt="">
+                            <img src="img/about/si.PNG" alt="">
                             <div class="events-post-date-info">
-                                <span>12</span> October
+                                <span>2</span> SEEK Inc.
 
                             </div>
                         </div>
                         <div class="events-content">
                             <a href="#">
-                                <h2>Feeding the community with H.O.M.E.S, Inc.</h2>
+                                <h2>We offer free summer, after school, and Saturday Science, Technology, Engineering, Arts, and Mathematics (STEM/STEAM) programs to students in grades K-12. This program engages students with rigorous learning through project
+                                    based instruction. Our goal is to bridge and associate in-school and out-of-school learning opportunities for learners of the 21st century.</h2>
                             </a>
                             <div class="events-post-meta">
                                 <ul>
@@ -918,18 +925,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6"> -->
-    <!-- Single events -->
-    <!-- <div class="events-info">
+                <div class="col-md-4 col-sm-6">
+                    <!-- Single events -->
+                    <div class="events-info">
                         <div class="events-img">
                             <img src="img/about/st2.JPG" alt="">
                             <div class="events-post-date-info">
-                                <span>13</span> October
+                                <span>3</span> Community Service:
                             </div>
                         </div>
                         <div class="events-content">
                             <a href="#">
-                                <h2>STEMtastic Saturday</h2>
+                                <h2>
+
+                                    Our Community Service engages individuals in volunteering and learning along side those who are passionate about affecting change in their communities and how an act of kindness can impact someone’s life, Once a month we feed and clothe the homeless at
+                                    Chapman Partnership or in Overtown, FL., with parents, children, organizations, and other community stakeholders.</h2>
                             </a>
                             <div class="events-post-meta">
                                 <ul>
@@ -941,9 +951,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6"> -->
-    <!-- Single events -->
-    <!-- <div class="events-info">
+                <div class="col-md-4 col-sm-6">
+                    <!-- Single events -->
+                    <!-- <div class="events-info">
                         <div class="events-img">
                             <img src="img/events/E4.JPG" alt="">
                             <div class="events-post-date-info">
@@ -960,13 +970,13 @@
                                     <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>new yourk</a></li>
                                 </ul>
                             </div>
-                            <p>We care for children, protect their welfare, and prepare them for the future.</p>
-                        </div>
-                    </div>
+                            <p>We care for children, protect their welfare, and prepare them for the future.</p> 
                 </div>
-                <div class="col-md-4 col-sm-6"> -->
-    <!-- Single events -->
-    <!-- <div class="events-info">
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-6"> -->
+                    <!-- Single events -->
+                    <!-- <div class="events-info">
                         <div class="events-img">
                             <img src="img/events/05.jpg" alt="">
                             <div class="events-post-date-info">
@@ -988,8 +998,8 @@
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6"> -->
-    <!-- Single events -->
-    <!-- <div class="events-info">
+                    <!-- Single events -->
+                    <!-- <div class="events-info">
                         <div class="events-img">
                             <img src="img/events/06.jpg" alt="">
                             <div class="events-post-date-info">
@@ -1008,11 +1018,11 @@
                             </div>
                             <p>We care for children, protect their welfare, and prepare them for the future.</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!--
         ============================
         events part end
@@ -1086,7 +1096,7 @@
                     <div class="title text-center">
                         <h2>what people say</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
+                        <p>We are dedicated.</p>
                     </div>
                 </div>
             </div>
@@ -1212,7 +1222,7 @@
                     <div class="title text-center">
                         <h2>in the news</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi tempora veritatis nemo aut ea iusto eos est expedita, quas ab adipisci consectetur tempora jet.</p>
+                        <p>Spreading the message.</p>
                     </div>
                 </div>
             </div>
@@ -1475,46 +1485,46 @@
         map contact info part start
         ============================
     -->
-    <section class="map-info-area">
-        <!-- google map -->
-        <div class="google-map">
+    <!-- <section class="map-info-area"> -->
+    <!-- google map -->
+    <!-- <div class="google-map">
             <div id="map" class="map"></div>
-        </div>
-        <!-- contact info -->
-        <div class="contact-info">
-            <h3>Get In Touch </h3>
-            <p>Do you have anything in your mind to tell us? Please don't hesitate to get in touch to us via our contact form.</p>
-            <!-- Single contact Info -->
-            <div class="single-contact-info">
-                <div class="media">
-                    <i class="fa fa-envelope"></i>
-                    <div class="media-body">
-                        <h5>E-mail:</h5>
-                        info@seekedu.org
-                    </div>
-                </div>
-            </div>
-            <!-- Single contact Info -->
-            <div class="single-contact-info">
-                <div class="media">
-                    <i class="fa fa-phone"></i>
-                    <div class="media-body">
-                        <h5>Phone:</h5>
-                        +305-639-0142
-                    </div>
-                </div>
-            </div>
-            <!-- Single contact Info -->
-            <div class="single-contact-info">
-                <div class="media">
-                    <i class="fa fa-map-marker"></i>
-                    <div class="media-body">
-                        <h5>Address:</h5>
-                        Miami-Dade: 990 Biscayne Blvd. Office 503, Miami, 33132 <br> Broward County: 515 E. Las Olas Blvd. Suite 120, Ft. Lauderdale, FL 33301 <br> Georgia: 2000 Riveredge Pkwy NW, Suite 885, Atlanta, GA 30328
-                    </div>
+        </div> -->
+    <!-- contact info -->
+    <div class="contact-info">
+        <h3>Get In Touch </h3>
+        <p>Do you have anything in your mind to tell us? Please don't hesitate to get in touch.</p>
+        <!-- Single contact Info -->
+        <div class="single-contact-info">
+            <div class="media">
+                <i class="fa fa-envelope"></i>
+                <div class="media-body">
+                    <h5>E-mail:</h5>
+                    info@seekedu.org
                 </div>
             </div>
         </div>
+        <!-- Single contact Info -->
+        <div class="single-contact-info">
+            <div class="media">
+                <i class="fa fa-phone"></i>
+                <div class="media-body">
+                    <h5>Phone:</h5>
+                    +305-639-0142
+                </div>
+            </div>
+        </div>
+        <!-- Single contact Info -->
+        <div class="single-contact-info">
+            <div class="media">
+                <i class="fa fa-map-marker"></i>
+                <div class="media-body">
+                    <h5>Address:</h5>
+                    Miami-Dade: 990 Biscayne Blvd. Office 503, Miami, 33132 <br> Broward County: 515 E. Las Olas Blvd. Suite 120, Ft. Lauderdale, FL 33301 <br> Georgia: 2000 Riveredge Pkwy NW, Suite 885, Atlanta, GA 30328
+                </div>
+            </div>
+        </div>
+    </div>
     </section>
     <!--
         ============================
