--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                 <div class="about-achievement">
                                     <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                                     <h4>Our experience</h4>
-                                    <p> Our company is built on trust, transparency and for providing credible resources. We have maintained positive, productive relationships with our cliennts that have partnered with us since 2013. </p>
+                                    <p> Our company is built on trust, transparency and for providing credible resources. We have maintained positive and productive relationships with our clients since 2013. </p>
                                 </div>
                             </div>
                         </div>
@@ -285,14 +285,14 @@
                     <!-- about details -->
                     <div class="about-details">
                         <h2>Mission Statement</h2>
-                        <p>The mission of S.E.E.K is to empower teenagers, parents, teachers, and the community to help protect lives and discover educational diverse programs that promote lifelong problem solvers beyond the classroom. </p>
+                        <p>The mission of S.E.E.K is to empower teenagers, parents, teachers, and the community to help protect lives and discover educationally diverse programs that promote lifelong problem solvers beyond the classroom. </p>
                         <p></p>
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="about-achievement">
                                     <i class="fa fa-users" aria-hidden="true"></i>
                                     <h4>Volunteers</h4>
-                                    <p> Our volunteers are committed and passionate about our mission. We connect with individuals, throughout Miami Dada and Broward County to create positive change in the life's of others. </p>
+                                    <p> Our volunteers are committed and passionate about our mission. We connect with individuals throughout Miami Dade and Broward County to create positive change in the lives of others. </p>
                                 </div>
                             </div>
                             <div class="col-sm-6">
@@ -320,7 +320,7 @@
                         <div class="service-icon">
                             <i class="fa fa-child" aria-hidden="true"></i>
                         </div>
-                        <p>Your support will help us serve many communities. Join us today.</p>
+                        <p>Your support will help us serve many children inn our community. Join us today!</p>
                         <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn move-eff"><span>Volunteer</span></a>
                     </div>
                 </div>
@@ -342,7 +342,7 @@
                         <div class="service-icon">
                             <i class="fa fa-money" aria-hidden="true"></i>
                         </div>
-                        <p>It takes a village to raise a child. We are working to provide better quality of life for underserved children. Donate now and you automatically receive tax exemption document.</p>
+                        <p>It takes a village to raise a child. We are working to provide a better quality of life for underserved children. Donate now and automatically receive a tax exemption document.</p>
                         <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
                     </div>
                 </div>
@@ -632,7 +632,7 @@
                     <div class="title text-center">
                         <h2>our gallery</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p> We pride ourself on capturing memorable moments from various walks of life being engage with our services. Take a tour below.</p>
+                        <p> We love to capture memorable moments of children engaging with our services. Take a tour below.</p>
                     </div>
                 </div>
             </div>
@@ -642,11 +642,11 @@
                     <div class="iso-nav">
                         <ul>
                             <li class="gallery-active hvr-bounce-to-left" data-filter="*">all</li>
-                            <li class="hvr-bounce-to-left" data-filter=".helping">Helping</li>
-                            <li class="hvr-bounce-to-left" data-filter=".foods">Foods</li>
-                            <li class="hvr-bounce-to-left" data-filter=".charity">Charity</li>
-                            <li class="hvr-bounce-to-left" data-filter=".events">events</li>
-                            <li class="hvr-bounce-to-left" data-filter=".biology">Biology</li>
+                            <li class="hvr-bounce-to-left" data-filter=".helping">STEAM</li>
+                            <li class="hvr-bounce-to-left" data-filter=".foods">Community Service</li>
+                            <li class="hvr-bounce-to-left" data-filter=".charity">Health & Fitness</li>
+                            <!-- <li class="hvr-bounce-to-left" data-filter=".events">Partnerships</li> -->
+                            <!-- <li class="hvr-bounce-to-left" data-filter=".biology">Biology</li> -->
                         </ul>
                     </div>
                 </div>
@@ -755,8 +755,8 @@
                         <h2>meet our team</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
                         <p>
-                            We are a passion driven group of people with over 30 years of teaching experiences. Our team believes that we can maintain and build new diverse programs by developing more relationships and partnership to produce innovative thinkers and self advocacy
-                            skills amongst the youth. We will continue to work relentlessly to provide effective services to children, parents, and community stakeholders.</p>
+                            We are a passion driven group of people with over 30 years of teaching experience. Our team believes that we can maintain and build new diverse programs by developing more partnerships to produce innovative thinkers and self advocacy skills amongst the
+                            youth. We will continue to work relentlessly to provide effective services for children, parents, and community stakeholders.</p>
                     </div>
                 </div>
             </div>
@@ -786,7 +786,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="single-volunteers">
                         <div class="volunteers-info">
-                            <img src="img/volunteers/ambry.JPG" alt="">
+                            <img src="img/volunteers/ambry1.PNG" alt="">
                             <div class="single-team-con">
                                 <div class="single-team-txt">
                                     <!-- team social links -->
@@ -807,7 +807,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="single-volunteers">
                         <div class="volunteers-info">
-                            <img src="img/volunteers/shirl.JPG" alt="">
+                            <img src="img/volunteers/shirlee.JPG" alt="">
                             <div class="single-team-con">
                                 <div class="single-team-txt">
                                     <!-- team social links -->
@@ -825,27 +825,27 @@
                     </div>
                 </div>
                 <!-- Single volunteers -->
-                <div class="col-md-3 col-sm-6">
+                <!-- <div class="col-md-3 col-sm-6">
                     <div class="single-volunteers">
                         <div class="volunteers-info">
                             <img src="img/volunteers/terr.jpg" alt="">
                             <div class="single-team-con">
-                                <div class="single-team-txt">
-                                    <!-- team social links -->
-                                    <ul>
+                                <div class="single-team-txt"> -->
+                <!-- team social links -->
+                <!-- <ul>
                                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                                         <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                                    </ul>
-                                    <!-- // team social links -->
-                                </div>
+                                    </ul> -->
+                <!-- // team social links -->
+                <!-- </div>
                             </div>
                         </div>
                         <h3>Terri-Ann Lott</h3>
                         <span>Treasurer</span>
-                    </div>
-                </div>
+                    </div> -->
             </div>
+        </div>
         </div>
     </section>
     <!--
@@ -1127,16 +1127,16 @@
                         </p>
                     </div>
                     <!-- single client -->
-                    <!-- <div class="single-client">
+                    <div class="single-client">
                         <div class="client-info">
-                            <img src="img/clients/03.jpg" alt="">
+                            <img src="img/clients/ll.JPG" alt="">
                             <div class="client-meta-info">
-                                <h3>Catherine Grace</h3>
-                                <span>CEO apple.inc</span>
+                                <h3>Ingrid Moss</h3>
+                                <span>Parent/Program Mgr withh FIU</span>
                             </div>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adiping elit. Etiam placerat odio nec quam aliquet, velsa consectetur neque varius.</p>
-                    </div> -->
+                        <p> Anike we had fun. Thank you!</p>
+                    </div>
                     <!-- single client -->
                     <!-- <div class="single-client">
                         <div class="client-info">
