--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                         <li><a class="nav-link" href="#gallery">gallery</a></li>
                                         <li><a class="nav-link" href="#volunteers">team</a></li>
                                         <!-- <li><a class="nav-link" href="#event">events</a></li> -->
-                                        <li><a class="nav-link" href="#blog">in the news</a></li>
+                                        <li><a class="nav-link" href="#blog">partnerships</a></li>
                                         <!-- <li class="dropdown">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages<span class="caret"></span></a>
                                             <ul class="dropdown-menu">
@@ -1220,9 +1220,9 @@
                 <div class="col-sm-8 col-sm-offset-2">
                     <!-- section title -->
                     <div class="title text-center">
-                        <h2>in the news</h2>
+                        <h2>Partnerships</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p>Spreading the message.</p>
+                        <p>WE have formed dynamic partnerships with organizations annd companies that share the same mission and vision.</p>
                     </div>
                 </div>
             </div>
@@ -1519,8 +1519,8 @@
             <div class="media">
                 <i class="fa fa-map-marker"></i>
                 <div class="media-body">
-                    <h5>Address:</h5>
-                    Miami-Dade: 990 Biscayne Blvd. Office 503, Miami, 33132 <br> Broward County: 515 E. Las Olas Blvd. Suite 120, Ft. Lauderdale, FL 33301 <br> Georgia: 2000 Riveredge Pkwy NW, Suite 885, Atlanta, GA 30328
+                    <h5>Addresses:</h5>
+                    * Miami-Dade: 990 Biscayne Blvd. Office 503, Miami, 33132 <br> * Broward County: 515 E. Las Olas Blvd. Suite 120, Ft. Lauderdale, FL 33301 <br> * Georgia: 2000 Riveredge Pkwy NW, Suite 885, Atlanta, GA 30328
                 </div>
             </div>
         </div>
@@ -1545,7 +1545,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-widgets">
                             <h2>Head Office</h2>
-                            <p>CEO-Anike Sakariyawo</p>
+                            <p></p>
                             <ul class="address-info">
                                 <li><i class="fa fa-phone" aria-hidden="true"></i> <a href="#">+305-639-0142</a></li>
                                 <li><i class="fa fa-envelope" aria-hidden="true"></i> <a href="#">info@seekedu.org</a></li>
