--- a/index.html
+++ b/index.html
@@ -343,7 +343,15 @@
                             <i class="fa fa-money" aria-hidden="true"></i>
                         </div>
                         <p>It takes a village to raise a child. We are working to provide a better quality of life for underserved children. Donate now and automatically receive a tax exemption document.</p>
-                        <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
+                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                            <input type="hidden" name="cmd" value="_s-xclick">
+                            <input type="hidden" name="hosted_button_id" value="ZYH9YK9X2KA6C">
+                            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                            <!-- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> -->
+                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+
+                        <!-- <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a> -->
                     </div>
                 </div>
             </div>
@@ -1222,7 +1230,7 @@
                     <div class="title text-center">
                         <h2>Partnerships</h2>
                         <div class="separate"><span class="separate-icon"></span></div>
-                        <p>WE have formed dynamic partnerships with organizations annd companies that share the same mission and vision.</p>
+                        <p>We have formed dynamic partnerships with organizations and companies that share the same mission and vision for children in our community.</p>
                     </div>
                 </div>
             </div>
