--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                             <div class="single-banner-txt">
                                 <h1><span>Rigorous</span> Education through S.T.E.M.</h1>
                                 <p class="fadeIn animated animated-08s">Science, Technology, Engineering, & Mathematic Programs.</p>
-                                <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
-                                <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn move-eff"><span>join volunteer</span></a>
+                                <!-- <a href="#donation" class="tem-btn nav-link move-eff"><span>volunteer now</span></a> -->
+                                <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn move-eff"><span>volunteer now</span></a>
                             </div>
                         </div>
                     </div>
@@ -161,9 +161,9 @@
                             <div class="single-banner-txt">
                                 <h1><span>Feeding</span> the homeless and <span>hungry.</span></h1>
                                 <p>No one should encounter going a day without food.</p>
-                                <a href="" class="tem-btn nav-link move-eff"><span>donate now</span></a>
+                                <!-- <a href="" class="tem-btn nav-link move-eff"><span>donate now</span></a> -->
 
-                                <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn move-eff"><span>join volunteer</span></a>
+                                <a href="https://www.eventbrite.com/e/volunteers-steamtastic-saturdays-with-earlington-heights-elementary-tickets-50266125334" class="tem-btn move-eff"><span>volunteer now</span></a>
 
                                 <!-- <a href="#" class="tem-btn move-eff wmBox" data-popup="https://www.youtube.com/embed/7e90gBu4pas?autoplay=1"><span>play video</span></a> -->
                             </div>
@@ -185,7 +185,7 @@
                             <div class="single-banner-txt">
                                 <h1><span>Kids Get Hip</span> and Fit Fair</h1>
                                 <p>Helping to tackle obesity in urban areas by teaching students healthy lifestyles.</p>
-                                <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
+                                <a href="#donation" class="tem-btn nav-link move-eff"><span>volunteer now</span></a>
                                 <a href="#" class="tem-btn move-eff"><span>contact us</span></a>
                             </div>
                         </div>
@@ -388,7 +388,14 @@
                                 </div>
                             </div>
                             <div class="progress-info">
-                                <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a>
+                                <!-- <a href="#donation" class="tem-btn nav-link move-eff"><span>donate now</span></a> -->
+                                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                    <input type="hidden" name="cmd" value="_s-xclick">
+                                    <input type="hidden" name="hosted_button_id" value="ZYH9YK9X2KA6C">
+                                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                    <!-- <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!"> -->
+                                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                                </form>
                                 <h3>$1,100 Donated / $10,900 To Go</h3>
                             </div>
                         </div>
