--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                                                 <div class="hero_img">
                                                     <img src="assets/img/vintage-logo.png" class="img-responsive" alt="" />
                                                 </div>
-                                                <h2>Get your best meal here</h2>
-                                                <p>The website of your restaurant.</p>
+                                                <h2>Welcome to Chicago 312</h2>
+                                                <p>Your favorite restaurant & lounge.</p>
                                                 <a class="btn btn-default btn-light-bg page-scroll" href="#reservation">Explore</a>
                                             </div>
                                         </div>
