--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </div>
                         <div class="tp-caption fs__14  tp-resizeme" id="slide-1-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']" data-width="none"
                             data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
-                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; font-weight: 400; color: rgba(255, 255, 255, 1.00); border-width:0px;">We utilize the latest technologies and best practices to service our customers
+                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; font-weight: 400; color: rgba(255, 255, 255, 1.00); border-width:0px;">We utilize the latest technologies
                         </div>
                         <div class="tp-caption  fs__13 tp-resizeme" id="slide-1-layer-5" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-110','-110','-110','-110']" data-width="none"
                             data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"from":"y:[-100%];z:0;rZ:35deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":500,"to":"o:1;","delay":900,"split":"chars","splitdelay":0.05,"ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
@@ -158,7 +158,7 @@
                         </div>
                         <div class="tp-caption rev-btn" id="slide-2934-layer-8" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['70','70','70','70']" data-width="none" data-height="none"
                             data-whitespace="nowrap" data-type="button" data-actions='[ { "event":"click", "action":"jumptoslide", "slide":"next", "delay":""}]' data-responsive_offset="on" data-responsive="off" data-frames='[{"from":"y:50px;opacity:0;","speed":1500,"to":"o:1;","delay":1250,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[175%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"},{"frame":"hover","speed":"300","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;"}]'
-                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 14; white-space: nowrap; font-size: 14px; line-height: 48px; border-radius:4px; font-weight: 700; color: rgba(255, 255, 255, 1.00);text-transform:left; letter-spacing:.5px;">GET STARTED TODAY
+                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 14; white-space: nowrap; font-size: 14px; line-height: 48px; border-radius:4px; font-weight: 700; color: rgba(255, 255, 255, 1.00);text-transform:left; letter-spacing:.5px;">FREE CONSULTATION
                         </div>
                     </li>
 
@@ -205,10 +205,10 @@
                         </div>
                         <div class="col-md-5 col-md-pull-7">
                             <div class="about_title text-left horizon" data-animate-in="transY:150px;duration:1000ms;">
-                                <h2>Award Winning</h2>
-                                <h3>Digital Agency with Enterprise Solutions</h3>
-                                <p>We are in the business of digital transformation. We help our clients see what they cannot. From Apple Commercials and Billboards to Gartner's Magic Quadrant and Webby Award winning mobile apps, our work sees no boundaries.</p>
-                                <a class="btn about__btn" href="#portfolio">Veiw our works</a>
+                                <h2>How do we get you more business?</h2>
+                                <h3>Engage and Captivate Your Customers</h3>
+                                <p>We are in the business of digital transformation. We help our clients see what they cannot. From Commercials and Product Photos to SEO Optimization and Facebook campaigns that shine on your brand, our work sees no boundaries.</p>
+                                <a class="btn about__btn" href="#portfolio">View our works</a>
                             </div>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                     <div class="col-md-12">
                         <div class="v2_title pb__70 text__center">
                             <h2>Our Service</h2>
-                            <h5>We Deliver best quality of service and our 100% clients are fully setisfied to work with us</h5>
+                            <h5>We deliver best quality of service and our 100% clients are fully setisfied to work with us</h5>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
