--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <span class="t__header__left">We are provide premium service</span>
+                        <span class="t__header__left">We Provide Premium Service</span>
                         <div class="float__right">
                             <div class="header__contact">
                                 <i class="fa fa-phone"></i><a href="tel:">9174637303</a>
@@ -122,7 +122,7 @@
                                     </li>
                                     <li><a href="#blog">Blog</a>
                                     </li>
-                                    <li><a href="#contact">Contact</a>
+                                    <li><a href="mailto:hello@kali.technology?Subject=Hello%20friend" target="_top">Contact</a>
                                     </li>
                                 </ul>
                             </div>
@@ -158,7 +158,7 @@
                         </div>
                         <div class="tp-caption rev-btn" id="slide-2934-layer-8" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['70','70','70','70']" data-width="none" data-height="none"
                             data-whitespace="nowrap" data-type="button" data-actions='[ { "event":"click", "action":"jumptoslide", "slide":"next", "delay":""}]' data-responsive_offset="on" data-responsive="off" data-frames='[{"from":"y:50px;opacity:0;","speed":1500,"to":"o:1;","delay":1250,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[175%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"},{"frame":"hover","speed":"300","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;"}]'
-                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 14; white-space: nowrap; font-size: 14px; line-height: 48px; border-radius:4px; font-weight: 700; color: rgba(255, 255, 255, 1.00);text-transform:left; letter-spacing:.5px;">FREE CONSULTATION
+                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 14; white-space: nowrap; font-size: 14px; line-height: 48px; border-radius:4px; font-weight: 700; color: rgba(255, 255, 255, 1.00);text-transform:left; letter-spacing:.5px;">  <a href="mailto:hello@kali.technology?Subject=FREE%20CONSULTATION" target="_top">FREE CONSULTATION</a>
                         </div>
                     </li>
 
@@ -185,7 +185,7 @@
                         </div>
                         <div class="tp-caption rev-btn" id="slide-3934-layer-8" data-x="['left','left','left','center']" data-hoffset="['23','40','40','0']" data-y="['middle','middle','middle','middle']" data-voffset="['70','70','70','70']" data-width="none" data-height="none"
                             data-whitespace="nowrap" data-type="button" data-actions='[{"event":"click","action":"scrollbelow","offset":"px","delay":""}]' data-responsive_offset="on" data-responsive="off" data-frames='[{"from":"y:50px;opacity:0;","speed":500,"to":"o:1;","delay":900,"ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
-                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 14; white-space: nowrap; font-size: 14px; line-height: 48px; border-radius:4px; font-weight: 700; color: rgba(255, 255, 255, 1.00);text-transform:left;letter-spacing:.5px;">GET STARTED TODAY
+                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 14; white-space: nowrap; font-size: 14px; line-height: 48px; border-radius:4px; font-weight: 700; color: rgba(255, 255, 255, 1.00);text-transform:left;letter-spacing:.5px;"> <a href="mailto:hello@kali.technology?Subject=Get%20Started&20Today" target="_top">GET STARTED TODAY</a>
                         </div>
                     </li>
                     <!-- slider one end-->
@@ -208,7 +208,7 @@
                                 <h2>How do we get you more business?</h2>
                                 <h3>Engage and Captivate Your Customers</h3>
                                 <p>We are in the business of digital transformation. We help our clients see what they cannot. From Commercials and Product Photos to SEO Optimization and Facebook campaigns that shine on your brand, our work sees no boundaries.</p>
-                                <a class="btn about__btn" href="#portfolio">View our works</a>
+                                <a class="btn about__btn" href="mailto:hello@kali.technology?Subject=Hello%20friend" target="_top">Contact</a>
                             </div>
                         </div>
                     </div>
