--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="onepage, one page, parallax, craetive, corporate, agency, minimal, revolution, modern, business, digital-agency">
     <meta name="author" content="https://themeforest.net/user/pixitives">
 
-    <title>Kali - Home Slider Version</title>
+    <title>Full Service Digital Marketing Agency</title>
 
     <!--  favicon -->
     <link rel="shortcut icon" href="images/favicon.png">
@@ -146,16 +146,17 @@
 
                         <div class="tp-caption   tp-resizeme" id="slide-1-layer-2" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-20','-20','-20','-20']" data-fontsize="['48','48','48','38']"
                             data-lineheight="['50','50','50','35']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"from":"z:0;rX:0deg;rY:0;rZ:0;sX:1.5;sY:1.5;skX:0;skY:0;opacity:0;","mask":"x:0px;y:0px;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;","ease":"Power2.easeInOut"}]'
-                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 900; color: rgba(255, 255, 255, 1.00);border-width:0px;">Get a modern website.
+                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 900; color: rgba(255, 255, 255, 1.00);border-width:0px;">DIGITAL MARKETING 
                         </div>
-                        <div class="tp-caption fs__14  tp-resizeme" id="slide-1-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']" data-width="none"
+                    
+                         <div class="tp-caption fs__14  tp-resizeme" id="slide-1-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']" data-width="none"
                             data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","mask":"x:0px;y:[100%];s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
                             data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; font-weight: 400; color: rgba(255, 255, 255, 1.00); border-width:0px;">We utilize the latest technologies
-                        </div>
+                        </div> 
                         <div class="tp-caption  fs__13 tp-resizeme" id="slide-1-layer-5" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-110','-110','-110','-110']" data-width="none"
                             data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"from":"y:[-100%];z:0;rZ:35deg;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":500,"to":"o:1;","delay":900,"split":"chars","splitdelay":0.05,"ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"nothing"}]'
-                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9; white-space: nowrap; font-size: 13px; line-height: 20px; font-weight: 700; color: rgba(255, 255, 255, 1.00);border-width:0px;">We are Kali
-                        </div>
+                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 9; white-space: nowrap; font-size: 13px; line-height: 20px; font-weight: 700; color: rgba(255, 255, 255, 1.00);border-width:0px;">Full Service
+                        </div> 
                         <div class="tp-caption rev-btn" id="slide-2934-layer-8" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['70','70','70','70']" data-width="none" data-height="none"
                             data-whitespace="nowrap" data-type="button" data-actions='[ { "event":"click", "action":"jumptoslide", "slide":"next", "delay":""}]' data-responsive_offset="on" data-responsive="off" data-frames='[{"from":"y:50px;opacity:0;","speed":1500,"to":"o:1;","delay":1250,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[175%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"},{"frame":"hover","speed":"300","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;"}]'
                             data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 14; white-space: nowrap; font-size: 14px; line-height: 48px; border-radius:4px; font-weight: 700; color: rgba(255, 255, 255, 1.00);text-transform:left; letter-spacing:.5px;">  <a href="mailto:hello@kali.technology?Subject=FREE%20CONSULTATION" target="_top">FREE CONSULTATION</a>
@@ -168,7 +169,7 @@
                         <img src="images/slider_v2_04.jpg" alt="" title="bg" width="1920" height="100%" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="off" class="rev-slidebg" data-no-retina>
                         <div class="tp-caption   tp-resizeme" id="slide-2-layer-2" data-x="['left','left','left','center']" data-hoffset="['23','40','40','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-20','-20','-20','-20']" data-fontsize="['48','48','48','38']"
                             data-lineheight="['50','50','50','35']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"from":"x:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1000,"to":"o:1;","delay":500,"split":"words","splitdelay":0.1,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
-                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 900; color: rgba(255, 255, 255, 1.00);border-width:0px;">We work with passion.
+                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 900; color:black;border-width:0px;">FULL SERVICE DMA 
                         </div>
                         <div class="tp-caption fs__14  tp-resizeme" id="slide-2-layer-3" data-x="['left','left','left','center']" data-hoffset="['23','40','40','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']" data-width="none" data-height="none"
                             data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"from":"y:50px;opacity:0;","speed":500,"to":"o:1;","delay":900,"ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
@@ -185,7 +186,7 @@
                         </div>
                         <div class="tp-caption rev-btn" id="slide-3934-layer-8" data-x="['left','left','left','center']" data-hoffset="['23','40','40','0']" data-y="['middle','middle','middle','middle']" data-voffset="['70','70','70','70']" data-width="none" data-height="none"
                             data-whitespace="nowrap" data-type="button" data-actions='[{"event":"click","action":"scrollbelow","offset":"px","delay":""}]' data-responsive_offset="on" data-responsive="off" data-frames='[{"from":"y:50px;opacity:0;","speed":500,"to":"o:1;","delay":900,"ease":"Power2.easeInOut"},{"delay":"wait","speed":300,"to":"opacity:0;","ease":"Power4.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
-                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 14; white-space: nowrap; font-size: 14px; line-height: 48px; border-radius:4px; font-weight: 700; color: rgba(255, 255, 255, 1.00);text-transform:left;letter-spacing:.5px;"> <a href="mailto:hello@kali.technology?Subject=Get%20Started&20Today" target="_top">GET STARTED TODAY</a>
+                            data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[20,20,20,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[20,20,20,20]" style="z-index: 14; white-space: nowrap; font-size: 14px; line-height: 48px; border-radius:4px; font-weight: 700; color: rgba(255, 255, 255, 1.00);text-transform:left;letter-spacing:.5px;"> <a href="mailto:hello@kali.technology?Subject=Get%20Started&20Today" target="_top">GET STARTED FREE TODAY</a>
                         </div>
                     </li>
                     <!-- slider one end-->
@@ -412,11 +413,11 @@
                         </div>
                         <div id="filters" class="button-group text-center pb__70 pb__sm__50">
                             <button class="button_item active" data-filter="*">All</button>
-                            <button class="button_item" data-filter=".filter_1">Wordpress</button>
-                            <button class="button_item" data-filter=".filter_2">Magento</button>
-                            <button class="button_item" data-filter=".filter_3">HTML</button>
-                            <button class="button_item" data-filter=".filter_4">Branding</button>
-                            <button class="button_item" data-filter=".filter_5">Logo Design</button>
+                            <button class="button_item" data-filter=".filter_1">Branding</button>
+                            <button class="button_item" data-filter=".filter_2">Website</button>
+                            <button class="button_item" data-filter=".filter_3">Photography</button>
+                            <button class="button_item" data-filter=".filter_4">Video</button>
+                            <button class="button_item" data-filter=".filter_5">FB/IG Ads</button>
                         </div>
                     </div>
                     <div class="col-md-12 grid-gallery overflow-hidden no-padding">
